# optimized-sentence-transformers

./: .gitignore  README.md  pyproject.toml
optimized_sentence_transformers/: __init__.py  convert.py  model.py  pooling.py  util.py
